--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body {
     background: color #424e61;
-    color: rgb(0, 0, 0);
+    color: white;
+    justify-content: space-around;
 }
-
+.cabecario-img{
+    width: 20%;
+}
