--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     background: color #424e61;
     color: white;
+    display: flex;
     justify-content: space-around;
 }
 .cabecario-img{
