--- a/style.css
+++ b/style.css
@@ -2,14 +2,12 @@
 margin: 0;
 padding: 0;
 }
-
-
-
 .cabecario {
     background: color #424e61;
     color: white;
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 .cabecario-img{
     width: 20%;
