--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ padding: 0;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding: 24px 0;
 }
 .cabecalho-img{
     width: 20%;
@@ -15,4 +16,5 @@ padding: 0;
     .cabecalho-lista-item{
         display: inline-block;
         margin: 0 16px;
+        font-size: 24px;
     }
